--- a/css/meditation.css
+++ b/css/meditation.css
@@ -17,8 +17,8 @@ body {
 
 .navbar-brand{
     display: flex;
-    justify-content: center; /* Horizontally center */
-    align-items: center; /* Vertically center */
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar-brand img {
@@ -41,8 +41,8 @@ body {
 .card {
     display: flex;
     background-color: darkslategray;
-    margin-bottom: 60px; /* Add spacing between cards */
-    overflow: hidden; /* Hide any overflowing content */
+    margin-bottom: 60px;
+    overflow: hidden;
     border-radius: 30px;
 }
 
@@ -102,7 +102,7 @@ body {
     align-content: center;
     width: 100vw;
     height: 91%;
-    background-color: rgba(0, 0, 0, 0.8); /* Dark grey label color */
+    background-color: rgba(0, 0, 0, 0.8);
     opacity: 85%;
     top: 0;
     left: 50%;
@@ -266,14 +266,14 @@ body {
     background-color: #c3e6cb;
     border: 1px solid #28a745;
     color: #28a745;
-    pointer-events: none; /* Evita que se pueda arrastrar nuevamente */
+    pointer-events: none;
 }
 
 .description.correct {
     background-color: #c3e6cb;
     border: 1px solid #28a745;
     color: #28a745;
-    pointer-events: none; /* Evita que se pueda soltar nuevamente */
+    pointer-events: none;
 }
 
 .description {
@@ -289,7 +289,7 @@ body {
 }
 
 .concept.used {
-    background-color: lightsteelblue; /* Cambia este color a lo que desees */
+    background-color: lightsteelblue;
 }
 
 #attempts{
@@ -302,12 +302,10 @@ body {
 
 #intro {
     position: relative;
-    /* Change position to relative */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     padding: 50px 0;
-    /* Adjust padding as needed */
     color: white;
     text-align: center;
     align-items: center;
@@ -326,7 +324,6 @@ body {
     width: 100vw;
     height: 90%;
     background-color: rgba(0, 0, 0, 0.8);
-    /* Dark grey label color */
     opacity: 85%;
     top: 0;
     left: 50%;
